--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap libraries -->
     <link rel="stylesheet" href="app/library/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="app/library/bootstrap-theme.min.css" media="screen" title="no title" charset="utf-8">
-    <script src="app/library/bootstrap.min.js" type="text/javascript"></script>
+    <!--<script src="app/library/bootstrap.min.js" type="text/javascript"></script>-->
 
     <!-- IE required polyfills, in this exact order -->
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
